# AI_hatena_bookmarker

./: .env.example  .gitignore  README.md  automation.sh  compose.yml  models.py  samconfig.toml  template.yaml
.github/workflows/: main.yml
app/: Dockerfile  chat.py  config.py  entry.py  hotentry.py  models.py  newentry.py  parser.py  requirements.txt  session.py  star.py  tokenizer.py
app/util/: chat.py  hatebu.py  models.py  session.py  util.py
events/: get_hello.json  post_bookmark.json
src/: .env.example  Dockerfile  app.py  pyproject.toml
src/libs/: bookmark.py
src/libs/common/: config.py  models.py
src/libs/util/: hatena.py  parser.py
src/libs/util/llm/: chat.py  prompt_template.py
tests/: conftest.py
tests/unit/: test_handler.py
